# human

./: Actor.cpp  Actor.h  Actor.hpp  Application.cpp  Application.h  Application.hpp  Application.inl  CMakeLists.txt  DebugInfo.h  Defines.h  Defines.hpp  Event.h  Game.cpp  Game.h  Game.hpp  Input.h  InputType.h  MainGame.cpp  MainGame.h  MainGame.hpp  MainWindow.cpp  MainWindow.h  NonCopyable.hpp  SDL_Setup.cpp  SDL_Setup.h  SDL_Setup.hpp  Singleton.hpp  Singleton.inl  Sprite.cpp  Sprite.h  Sprite.hpp  human.vcxproj  main.cpp
gem/: contributors.txt
gem/src/gem/: Application.cpp  Application.hpp  Application.inl  Assert.hpp  Asset.cpp  Asset.hpp  BlendMode.hpp  Color.cpp  Color.hpp  Color.inl  Content.cpp  Content.hpp  Content.inl  DrawEffects.hpp  Error.hpp  Error.inl  Event.hpp  Graphics.hpp  Input.hpp  Logger.cpp  Logger.hpp  Logger.inl  Math.hpp  Math.inl  Matrix.cpp  Matrix.hpp  Matrix.inl  Point.cpp  Point.hpp  Point.inl  Rectangle.cpp  Rectangle.hpp  Rectangle.inl  Singleton.hpp  Singleton.inl  Stack.h  System.cpp  System.hpp  Texture.cpp  Texture.hpp  (+6 more)
gem/src/gem/detail/: SdlGraphics.cpp  SdlGraphics.hpp  SdlMain.cpp  SdlTexture.cpp  SdlTexture.hpp  SdlTexture.inl
gem/test/src/gem/: ErrorTest.cpp  PointTest.cpp  RectangeTest.cpp  Vector2Test.cpp
